# m5-range-scanner

./: .dockerignore  .env.example  .gitignore  Dockerfile.frontend  README.md  alembic.ini  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_phase_two_storage.py  0002_ml_research_storage.py  0003_ml_training_split.py  0004_replace_timeout_outcome.py  0005_reset_history_for_v2.py
backend/: Dockerfile
backend/app/: analysis.py  bybit_client.py  config.py  database.py  detector_v2.py  history.py  main.py  ml_export.py  ml_pipeline.py  models.py  outcomes.py  persistence.py  reset_history.py  scanner.py  trade_plan.py  worker.py
deploy/: m5-scanner-watchdog.service  m5-scanner-watchdog.timer  m5-scanner.service  nginx.conf  watchdog.sh
docs/: regression-v0.1-to-v0.1.1.md
scripts/: prepare_ml_dataset.py  regression_compare.py
src/: App.test.tsx  App.tsx  main.tsx  styles.css
tests/: test_analysis.py  test_integration.py  test_ml_pipeline.py  test_phase_two.py  test_regression_fixture.py  test_trade_plan.py
